--- a/templates/edt/base.html
+++ b/templates/edt/base.html
@@ -29,7 +29,7 @@
 		<link rel="stylesheet" href="/static/css/jquery.timepicker.css">
 		<link rel="stylesheet" href="/static/css/datepicker.css"> 
 		<link rel="stylesheet" href="/static/css/bootstrap.css">
-		<link rel="stylesheet" href="/static/css/style.css?version=1.2">
+		<link rel="stylesheet" href="/static/css/style.css?version=1.1">
 		<link rel="stylesheet" href="/static/css/freelancer.css">
 		<link rel="stylesheet" href="/static/css/jquery.qtip.css">
 		<link rel="stylesheet" href="/static/css/hover-min.css" media="all">
@@ -66,7 +66,7 @@
 								  <li class="divider"></li>
 								  <li class="dropdown-header">Administración</li>
 
-								  {% if  usuario.funcion.id == 36 or usuario.funcion.id == 26 or usuario.funcion.id == 31 %}
+								  {% if  usuario.funcion.id == 36 or usuario.funcion.id == 26 or usuario.funcion.id == 31 or usuario.funcion.id == 58 %}
 				     				<li class="hvr-underline-from-center page-scroll"><a href="/licencia/">Ingresar Licencia</a></li>
 				      			  {% endif %}
 				      			  
