--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1251,3 +1251,51 @@ header h5{
 	float: right;
 	margin-top: -25px;
 }
+
+
+/* Removes the clear button from date inputs */
+input[type="date"]::-webkit-clear-button {
+    display: none;
+}
+
+/* Removes the spin button */
+input[type="date"]::-webkit-inner-spin-button { 
+    display: none;
+}
+
+/* Always display the drop down caret */
+input[type="date"]::-webkit-calendar-picker-indicator {
+    color: #ff0000;
+}
+
+/* A few custom styles for date inputs */
+input[type="date"] {
+    appearance: none;
+    -webkit-appearance: none;
+    color: #95a5a6;
+    font-family: "Helvetica", arial, sans-serif;
+    font-size: 18px;
+    border:1px solid #ecf0f1;
+    background:#ecf0f1;
+    padding:5px;
+    display: inline-block !important;
+    visibility: visible !important;
+}
+
+input[type="date"], focus {
+    color: #95a5a6;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+}
+
+
+input[type="date"]:before {
+    content: attr(placeholder) !important;
+    color: #000;
+    margin-right: 0.5em;
+  }
+input[type="date"]:focus:before,
+input[type="date"]:valid:before {
+    content: "";
+  }
