--- a/templates/edt/base.html
+++ b/templates/edt/base.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />		
 		<script src="/static/js/jquery-2.1.4.min.js"></script>
 		<!-- jquery UI -->
-  		<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+  		<!-- <script src="//code.jquery.com/jquery-1.10.2.js"></script> -->
 	 	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 		<!-- JS ###################################################################################-->
 		<script src="/static/js/bootstrap.js" /> </script>
@@ -21,6 +21,7 @@
 		<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.min.js'></script>
 		<script src='/static/js/jquery.stickyheader.js'></script>
 		<script src="/static/js/jquery.chained.js"></script>
+		<script src="/static/js/jquery.chained.remote.js"></script>
 
 		<!-- CSS ################################################################################# -->
 		<link rel='stylesheet' href='/static/fullcalendar/fullcalendar.css' />
@@ -29,7 +30,7 @@
 		<link rel="stylesheet" href="/static/css/jquery.timepicker.css">
 		<link rel="stylesheet" href="/static/css/datepicker.css"> 
 		<link rel="stylesheet" href="/static/css/bootstrap.css">
-		<link rel="stylesheet" href="/static/css/style.css?version=1.1">
+		<link rel="stylesheet" href="/static/css/style.css?version=1.2">
 		<link rel="stylesheet" href="/static/css/freelancer.css">
 		<link rel="stylesheet" href="/static/css/jquery.qtip.css">
 		<link rel="stylesheet" href="/static/css/hover-min.css" media="all">
