--- a/templates/edt/comprobante.html
+++ b/templates/edt/comprobante.html
@@ -25,7 +25,7 @@
 
 	<li class="list-group-item" >
 	<span class="badge">{{eventoObj.delta}}</span>
-		{{eventoObj.numero_evento.start|date:"D d M "}}{{"   "}}{{eventoObj.numero_evento.start|date:"G:i"}}{{"-"}} {{eventoObj.numero_evento.end|date:"G:i"}}</li>
+		{{eventoObj.numero_evento.start|date:"D d M "}}{{"   "}}{{eventoObj.numero_evento.start|timezone:"America/Noronha"|date:"G:i"}}{{"-"}} {{eventoObj.numero_evento.end|timezone:"America/Noronha"|date:"G:i"}}</li>
 	{% endfor %}
 	<li class="list-group-item" >
 	<span class="badge">{% if permiso.usuario.jefatura.id == 1 or permiso.usuario.jefatura.id == 6 or permiso.usuario.jefatura.id == 7 %}Total{{"  "}}{{permiso.horas_solicitadas}} {% else %}
