--- a/templates/edt/licencia.html
+++ b/templates/edt/licencia.html
@@ -216,7 +216,7 @@ function sumaFecha(iniciolic,diaslic)
 	 var mes= fecha.getMonth()+1;
 	 
 	 if (es_chrome){
-	 	var dia= fecha.getDate()-1;
+	 	var dia= fecha.getDate();//-1;
 	 }
 
 	 if(es_firefox){
