--- a/templates/edt/email_jefatura_modificacion.html
+++ b/templates/edt/email_jefatura_modificacion.html
@@ -38,16 +38,10 @@
 		<li style="position: relative;  display: block;  padding: 10px 15px;  margin-bottom: -1px;  background-color: #ffffff;  border: 1px solid #ecf0f1;position: relative;  display: block;  padding: 10px 15px;  margin-bottom: -1px;  background-color: #ffffff;  border: 1px solid #ecf0f1;position: relative;  display: block;  padding: 10px 15px;  margin-bottom: -1px;  background-color: #ffffff;  border: 1px solid #ecf0f1;position: relative;  display: block;  padding: 10px 15px;  margin-bottom: -1px;  background-color: #ffffff;  border: 1px solid #ecf0f1;">	
 			Comentario : {{resolucion.razon}}
 		</li>
-
-		{% else %}
-
-			<li style="position: relative;  display: block;  padding: 10px 15px;  margin-bottom: -1px;  background-color: #ffffff;  border: 1px solid #ecf0f1;position: relative;  display: block;  padding: 10px 15px;  margin-bottom: -1px;  background-color: #ffffff;  border: 1px solid #ecf0f1;position: relative;  display: block;  padding: 10px 15px;  margin-bottom: -1px;  background-color: #ffffff;  border: 1px solid #ecf0f1;position: relative;  display: block;  padding: 10px 15px;  margin-bottom: -1px;  background-color: #ffffff;  border: 1px solid #ecf0f1;">
-			
-			Comentario : {{resolucion.razon}}
-
-
+	
+		<li style="position: relative;  display: block;  padding: 10px 15px;  margin-bottom: -1px;  background-color: #ffffff;  border: 1px solid #ecf0f1;position: relative;  display: block;  padding: 10px 15px;  margin-bottom: -1px;  background-color: #ffffff;  border: 1px solid #ecf0f1;position: relative;  display: block;  padding: 10px 15px;  margin-bottom: -1px;  background-color: #ffffff;  border: 1px solid #ecf0f1;position: relative;  display: block;  padding: 10px 15px;  margin-bottom: -1px;  background-color: #ffffff;  border: 1px solid #ecf0f1;">	
+			Autorizado por : {{autorizador}}
 		</li>
-
 		{% endif %}
 
 
