--- a/templates/edt/modpermiso.html
+++ b/templates/edt/modpermiso.html
@@ -4,6 +4,11 @@
 {% block contenido %}
 {% load tz %}
 {% get_current_timezone as TIME_ZONE %}
+
+<!-- {% for autor in autorizador %}
+{{autor.nombre}}
+{% endfor %} --> 
+
 <div id="resolucion" class="msg-comprobante">
 <ul class="list-group">
 {{form.errors}}
@@ -41,7 +46,17 @@
 </div>
 <div id="resolucion" class="msg-comprobante" >
 <ul class="list-group">
-	<li class="list-group-item active" ><h4 style="color:#FFFFFF !important;">Modificación</h4></li>
+	<li class="list-group-item active" ><h4 style="color:#FFFFFF !important;">Autorizado por</h4></li>
+	<label  class=" col-sm-2 col-form-label col-form-label-lg modlabel">Nombre</label>
+		<select name="autorizador" class="modlabel">
+			<option value="0" selected>Seleccione una opción</option>
+		{% for autor in autorizador %}
+			<option value="{{autor.id}}">{{autor.nombre}} {{autor.apellido1}}</option>
+		{% endfor %}
+	</select>
+
+
+	<li class="list-group-item active modlabel" ><h4 style="color:#FFFFFF !important;">Modificación</h4></li>
 	<li class="list-group-item" >
 <input type="hidden" name="permiso" value="{{permiso.id}}">
 
