--- a/templates/edt/verpermiso.html
+++ b/templates/edt/verpermiso.html
@@ -4,6 +4,8 @@
 {% block contenido %}
 {% load tz %}
 {% get_current_timezone as TIME_ZONE %}
+
+{{cuenta}}
 <div id="resolucion" class="msg-comprobante">
 <ul class="list-group">
 {{form.errors}}
