--- a/templates/edt/base.html
+++ b/templates/edt/base.html
@@ -33,7 +33,7 @@
 		<link rel="stylesheet" href="/static/css/hover-min.css" media="all">
 		<link rel="stylesheet" href="/static/css/print.css" media="print">
 		<link rel="stylesheet" href="/static/css/bootstrap-datetimepicker.min.css">
-		<!--<link rel="stylesheet" href="/static/css/tablas.css">
+		<!--<link rel="stylesheet" href="/static/css/material-kit.min.css">
 		<link rel="stylesheet" href="/static/css/util.css"> -->
 		
 		<title>SCA - Lycée Charles de Gaulle</title>
