se agrega funcinarios con permiso current day

--- a/templates/edt/conpermisolst.html
+++ b/templates/edt/conpermisolst.html
@@ -28,6 +28,12 @@
             <a href="/conpermisoPDF?{{query_string}}" class="btn btn-success btn-block" target="_blank">
                 <img src="/static/img/pdf.png" width="35" height="35">
             </a>                          
+        </div>
+
+        <div class="col-lg-1">                            
+            <a href="/conpermisohoy" class="btn btn-success btn-block" target="_self">
+                <img src="/static/img/calendar.svg" width="35" height="35">
+            </a>                          
         </div>                                                    
     </div>
 </div>
